--- a/index.html
+++ b/index.html
@@ -170,14 +170,14 @@
 
             <!-- four boxes -->
             <div class="flex flex-col gap-5 w-full">
-                <div class="flex flex-col gap-5 lg:gap-60p lg:grid lg:grid-cols-2">
+                <div class="flex flex-col gap-5 lg:gap-60p lg:grid lg:grid-cols-2 text-co-dark">
 
-                    <div class="bg-co-white rounded-box lg:box-desktop w-full pt-46p pb-52p lg:p-9">
+                    <div class="box bg-co-white rounded-box lg:box-desktop w-full pt-46p pb-52p lg:p-9 hover:drop-shadow-[0_0px_172px_rgba(8,8,9,0.32)] hover:text-co-white transition-all delay-75">
                         <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-[80%] mx-auto lg:w-full">
                             <img alt=" " src="assets/img/img-1.png">
                             <div class="flex flex-col gap-9p items-start">
                                 <div class="mb-9p"><span
-                                        class="text-[66px] font-bold lg:text-co-h2 text-co-dark">1</span><span
+                                        class="text-[66px] font-bold lg:text-co-h2">1</span><span
                                         class="text-[66px] font-bold text-co-yellow lg:text-co-h2">.</span>
                                 </div>
                                 <p class="text-2xl font-bold lg:text-co-button">Phasellus Vitae</p>
@@ -187,12 +187,12 @@
                         </div>
                     </div>
 
-                    <div class="bg-co-yellow rounded-box lg:box-desktop w-full pt-46p pb-52p lg:p-9 lg:-mb-120p lg:self-end">
+                    <div class="box bg-co-yellow rounded-box lg:box-desktop w-full pt-46p pb-52p lg:p-9 lg:-mb-120p lg:self-end hover:drop-shadow-[0_0px_172px_rgba(8,8,9,0.32)]">
                         <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-2/3 mx-auto lg:w-full">
                             <img alt=" " src="assets/img/img-2.png">
                             <div class="flex flex-col gap-9p items-start">
                                 <div class="mb-9p"><span
-                                        class="text-[66px] font-bold lg:text-co-h2 text-co-dark">2</span><span
+                                        class="text-[66px] font-bold lg:text-co-h2">2</span><span
                                         class="text-[66px] font-bold text-co-white lg:text-co-h2">.</span>
                                 </div>
                                 <p class="text-2xl font-bold lg:text-co-button">Iaculis Magna</p>
@@ -202,12 +202,12 @@
                         </div>
                     </div>
 
-                    <div class="bg-co-white lg:bg-co-yellow rounded-box lg:box-desktop w-full pt-46p pb-52p lg:p-9">
+                    <div class="box bg-co-white lg:bg-co-yellow rounded-box lg:box-desktop w-full pt-46p pb-52p lg:p-9 hover:drop-shadow-[0_0px_172px_rgba(8,8,9,0.32)]">
                         <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-2/3 mx-auto lg:w-full">
                             <img alt=" " src="assets/img/img-3.png">
                             <div class="flex flex-col gap-9p items-start">
                                 <div class="mb-9p"><span
-                                        class="text-[66px] font-bold lg:text-co-h2 text-co-dark">3</span><span
+                                        class="text-[66px] font-bold lg:text-co-h2">3</span><span
                                         class="text-[66px] font-bold text-co-yellow lg:text-co-white lg:text-co-h2">.</span>
                                 </div>
                                 <p class="text-2xl font-bold lg:text-co-button">Eleifend Pulvinar</p>
@@ -217,12 +217,12 @@
                         </div>
                     </div>
 
-                    <div class="bg-co-yellow lg:bg-co-white rounded-box lg:box-desktop w-full pt-46p pb-52p lg:p-9 lg:-mb-120p lg:self-end">
+                    <div class="box bg-co-yellow lg:bg-co-white rounded-box lg:box-desktop w-full pt-46p pb-52p lg:p-9 lg:-mb-120p lg:self-end hover:drop-shadow-[0_0px_172px_rgba(8,8,9,0.32)]">
                         <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-2/3 mx-auto lg:w-full">
                             <img alt=" " src="assets/img/img-4.png">
                             <div class="flex flex-col gap-9p items-start">
                                 <div class="mb-9p"><span
-                                        class="text-[66px] font-bold lg:text-co-h2 text-co-dark">4</span><span
+                                        class="text-[66px] font-bold lg:text-co-h2">4</span><span
                                         class="text-[66px] font-bold text-co-white lg:text-co-yellow lg:text-co-h2">.</span>
                                 </div>
                                 <p class="text-2xl font-bold lg:text-co-button">Velito Odio Phire</p>
@@ -375,7 +375,7 @@
                         Lorem Ipsum
                         <svg class="hidden lg:block" fill="none" height="18" viewBox="0 0 25 18" width="25"
                              xmlns="http://www.w3.org/2000/svg">
-                            <path class="text-co-white lg:text-co-dark "
+                            <path class="fill-co-white lg:text-co-dark "
                                   d="M16.25 0.269531L14.4922 2.02734L20.2344 7.76953H0.0195312V10.2305H20.2344L14.4922 15.9727L16.25 17.7305L24.9805 9L16.25 0.269531Z"
                                   fill="#262626"/>
                         </svg>
