four boxes add hover bg

--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
             <div class="flex flex-col gap-5 w-full">
                 <div class="flex flex-col gap-5 lg:gap-60p lg:grid lg:grid-cols-2 text-co-dark">
 
-                    <div class="box bg-co-white rounded-box lg:box-desktop w-full pt-46p pb-52p lg:p-9 hover:drop-shadow-[0_0px_172px_rgba(8,8,9,0.32)] hover:text-co-white transition-all delay-75">
+<!--                    Box No.1-->
+                    <div class="box bg-co-white rounded-box w-full pt-46p pb-52p lg:p-9 hover:drop-shadow-[0_0px_172px_rgba(8,8,9,0.32)] hover:text-co-white transition-all delay-75">
                         <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-[80%] mx-auto lg:w-full">
                             <img alt=" " src="assets/img/img-1.png">
                             <div class="flex flex-col gap-9p items-start">
@@ -187,7 +188,7 @@
                         </div>
                     </div>
 
-                    <div class="box bg-co-yellow rounded-box lg:box-desktop w-full pt-46p pb-52p lg:p-9 lg:-mb-120p lg:self-end hover:drop-shadow-[0_0px_172px_rgba(8,8,9,0.32)]">
+                    <div class="box bg-co-yellow rounded-box w-full pt-46p pb-52p lg:p-9 hover:drop-shadow-[0_0px_172px_rgba(8,8,9,0.32)] hover:text-co-white transition-all delay-75 lg:-mb-120p lg:self-end">
                         <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-2/3 mx-auto lg:w-full">
                             <img alt=" " src="assets/img/img-2.png">
                             <div class="flex flex-col gap-9p items-start">
@@ -202,7 +203,7 @@
                         </div>
                     </div>
 
-                    <div class="box bg-co-white lg:bg-co-yellow rounded-box lg:box-desktop w-full pt-46p pb-52p lg:p-9 hover:drop-shadow-[0_0px_172px_rgba(8,8,9,0.32)]">
+                    <div class="box bg-co-white lg:bg-co-yellow rounded-box w-full pt-46p pb-52p lg:p-9 hover:drop-shadow-[0_0px_172px_rgba(8,8,9,0.32)] hover:text-co-white transition-all delay-75">
                         <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-2/3 mx-auto lg:w-full">
                             <img alt=" " src="assets/img/img-3.png">
                             <div class="flex flex-col gap-9p items-start">
@@ -217,7 +218,7 @@
                         </div>
                     </div>
 
-                    <div class="box bg-co-yellow lg:bg-co-white rounded-box lg:box-desktop w-full pt-46p pb-52p lg:p-9 lg:-mb-120p lg:self-end hover:drop-shadow-[0_0px_172px_rgba(8,8,9,0.32)]">
+                    <div class="box bg-co-yellow lg:bg-co-white  rounded-box  w-full pt-46p pb-52p lg:p-9 hover:drop-shadow-[0_0px_172px_rgba(8,8,9,0.32)] hover:text-co-white transition-all delay-75 lg:-mb-120p lg:self-end">
                         <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-2/3 mx-auto lg:w-full">
                             <img alt=" " src="assets/img/img-4.png">
                             <div class="flex flex-col gap-9p items-start">
