add testimonial hover animation

--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
                         </div>
                     </div>
 
+                    <!--Box No.3-->
                     <div class="box lg:bg-co-yellow">
                         <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-2/3 mx-auto lg:w-full">
                             <img alt=" " src="assets/img/img-3.png">
@@ -219,7 +220,7 @@
                         </div>
                     </div>
 
-                    <!--Box No.3-->
+                    <!--Box No.4-->
                     <div class="box bg-co-yellow lg:bg-co-white  lg:-mb-120p lg:self-end">
                         <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-2/3 mx-auto lg:w-full">
                             <img alt=" " src="assets/img/img-4.png">
@@ -272,12 +273,12 @@
 
 <!-- Testimonial Section -->
 <div class="co-container">
-    <div class="bg-co-white rounded-mobile lg:rounded-desktop pt-42p pb-38p mb-10 lg:mb-170p lg:py-100p">
+    <div class="card bg-co-white rounded-mobile lg:rounded-desktop pt-42p pb-38p mb-10 lg:mb-170p lg:py-100p">
 
         <div class="w-[85%] mx-auto">
 
             <!-- Card -->
-            <div class="flex flex-col lg:flex-row items-center gap-10 lg:gap-72p lg:justify-center">
+            <div class="card-content flex flex-col lg:flex-row items-center gap-10 lg:gap-72p lg:justify-center">
 
                 <img alt="Customer Picture" class="rounded-full w-272p h-272p lg:w-472p lg:h-472p lg:basis-1/3"
                      src="/assets/img/customer1.jpeg">
@@ -286,11 +287,20 @@
                     <h4 class="text-co-h3-bold lg:text-co-h4">What our customers thought?</h4>
                     <p class="text-base lg:text-co-h5">Euismod magna id purus eget nunc ligula suspendisse dui netus.
                         Condimentum blandit rutrum at mauris enim pulvinar duis etiam duis. </p>
-                    <span class="text-co-button mb-2.5 lg:mb-5">Holly Davidson</span>
+                    <span class="card-name text-co-button mb-2.5 lg:mb-5">Holly Davidson</span>
 
                     <div class="flex flex-row justify-center gap-10">
-                        <button><img alt="Previous" src="/assets/img/arrow-l.svg"></button>
-                        <button><img alt="Next" src="/assets/img/arrow-r.svg"></button>
+                        <button class="card-arrow-l">
+                            <svg width="41" height="17" viewBox="0 0 41 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M0.914062 8.48779L9.21484 0.187012L9.21484 6.43701L40.4648 6.43701V10.5386L9.21484 10.5386L9.21484 16.7886L0.914062 8.48779Z" fill="#262626"/>
+                            </svg>
+                        </button>
+                        <button>
+                            <svg width="41" height="17" viewBox="0 0 41 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M40.0156 8.48779L31.7148 16.7886V10.5386H0.464844V6.43701H31.7148V0.187012L40.0156 8.48779Z" fill="#F9B800"/>
+                            </svg>
+                        </button>
+
                     </div>
                 </div>
 
