faq animation working, style not done

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
     <link href="dist/style.css" rel="stylesheet" type="text/css">
     <link href="assets/img/favicon.png" rel="icon" type="image/png">
-    <link href="https://fonts.googleapis.com" rel="preconnect">
-    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
-          rel="stylesheet">
+<!--    <link href="https://fonts.googleapis.com" rel="preconnect">-->
+<!--    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">-->
+<!--    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"-->
+<!--          rel="stylesheet">-->
 
     <!--    <script src="dist/script.js"></script>-->
 
@@ -419,66 +419,56 @@
         <!-- Accordion -->
         <div class="overflow-hidden flex flex-col gap-3.5 lg:gap-6">
 
+            <div class="faq bg-co-white rounded-mobile py-30p lg:py-66p pr-9 pl-34p lg:pr-60p lg:pl-90p">
+                <input id="chk1" type="checkbox">
+                <label for="chk1" class="cursor-pointer">
+                    <div class="flex items-center justify-between gap-5">
+                        <p class="faq-heading text-co-mo-h2 lg:text-co-h5-sbold">Quam vehicula faucibus amet lorem. </p>
+                        <div class='faq-arrow'></div>
+                    </div>
+                    <p class="faq-text text-co-p2 lg:text-co-h5 p-0 transition-all ease-in-out pt-5">Nunc ligula suspendisse duis etiam duis. Mauris fermentum praesent tellus euismod.</p>
+                </label>
+            </div>
+
+            <div class="faq bg-co-white rounded-mobile py-30p lg:py-66p pr-9 pl-34p lg:pr-60p lg:pl-90p">
+                <input id="chk2" type="checkbox">
+                <label for="chk2" class="cursor-pointer">
+                    <div class="flex items-center justify-between gap-5">
+                        <p class="faq-heading text-co-mo-h2 lg:text-co-h5-sbold">Quam vehicula faucibus amet lorem. </p>
+                        <div class='faq-arrow'></div>
+                    </div>
+                    <p class="faq-text text-co-p2 lg:text-co-h5 p-0 transition-all ease-in-out pt-5">Nunc ligula suspendisse duis etiam duis. Mauris fermentum praesent tellus euismod.</p>
+                </label>
+            </div>
+
+            <div class="faq bg-co-white rounded-mobile py-30p lg:py-66p pr-9 pl-34p lg:pr-60p lg:pl-90p">
+                <input id="chk3" type="checkbox">
+                <label for="chk3" class="cursor-pointer">
+                    <div class="flex items-center justify-between gap-5">
+                        <p class="faq-heading text-co-mo-h2 lg:text-co-h5-sbold">Quam vehicula faucibus amet lorem. </p>
+                        <div class='faq-arrow'></div>
+                    </div>
+                    <p class="faq-text text-co-p2 lg:text-co-h5 p-0 transition-all ease-in-out pt-5">Nunc ligula suspendisse duis etiam duis. Mauris fermentum praesent tellus euismod.</p>
+                </label>
+            </div>
+
+
+
             <!-- item 1 -->
-            <div class="bg-co-white rounded-mobile py-30p lg:py-66p pr-9 pl-34p lg:pr-60p lg:pl-90p">
-                <div class="overflow-hidden">
-                    <input id="chk1" type="checkbox">
-                    <label class="flex flex-row justify-between cursor-pointer" for="chk1">
-                        <span class="text-co-mo-h2 lg:text-co-h5-sbold">Quam vehicula faucibus amet lorem. </span>
-                        <img alt=" " src="/assets/img/icon-plus.svg">
-                        <img alt=" " class="hidden" src="/assets/img/icon-remove.svg">
-                    </label>
-                    <div class="faq-item-content text-co-p2 lg:text-co-h5 p-0 transition-all ease-in-out">Nunc ligula
-                        suspendisse dui netus. Condimentum blandit rutrum at mauris enim pulvinar duis etiam duis.
-                        Mauris fermentum praesent tellus euismod.
-                    </div>
-                </div>
-            </div>
-
-            <div class="bg-co-white rounded-mobile py-30p lg:py-66p pr-9 pl-34p lg:pr-60p lg:pl-90p">
-                <div class="overflow-hidden">
-                    <input id="chk2" type="checkbox">
-                    <label class="flex flex-row justify-between cursor-pointer" for="chk2">
-                        <span class="text-co-mo-h2-bold lg:text-co-h5-sbold">Quam vehicula faucibus amet lorem. </span>
-                        <img alt=" " src="/assets/img/icon-plus.svg">
-                        <img alt=" " class="hidden" src="/assets/img/icon-remove.svg">
-                    </label>
-                    <div class="faq-item-content text-co-p2 lg:text-co-h5 p-0 transition-all ease-in-out">Nunc ligula
-                        suspendisse dui netus. Condimentum blandit rutrum at mauris enim pulvinar duis etiam duis.
-                        Mauris fermentum praesent tellus euismod.
-                    </div>
-                </div>
-            </div>
-
-            <div class="bg-co-white rounded-mobile py-30p lg:py-66p pr-9 pl-34p lg:pr-60p lg:pl-90p">
-                <div class="overflow-hidden">
-                    <input id="chk3" type="checkbox">
-                    <label class="flex flex-row justify-between cursor-pointer" for="chk3">
-                        <span class="text-co-mo-h2-bold lg:text-co-h5-sbold">Quam vehicula faucibus amet lorem. </span>
-                        <img alt=" " src="/assets/img/icon-plus.svg">
-                        <img alt=" " class="hidden" src="/assets/img/icon-remove.svg">
-                    </label>
-                    <div class="faq-item-content text-co-p2 lg:text-co-h5 p-0 transition-all ease-in-out">Nunc ligula
-                        suspendisse dui netus. Condimentum blandit rutrum at mauris enim pulvinar duis etiam duis.
-                        Mauris fermentum praesent tellus euismod.
-                    </div>
-                </div>
-            </div>
-
-            <div class="bg-co-white rounded-mobile py-30p lg:py-66p pr-9 pl-34p lg:pr-60p lg:pl-90p">
-                <div class="overflow-hidden">
-                    <input id="chk4" type="checkbox">
-                    <label class="flex flex-row justify-between cursor-pointer" for="chk4">
-                        <span class="text-co-mo-h2-bold lg:text-co-h5-sbold">Quam vehicula faucibus amet lorem. </span>
-                        <img alt=" " src="/assets/img/icon-plus.svg">
-                        <img alt=" " class="hidden" src="/assets/img/icon-remove.svg">
-                    </label>
-                    <div class="faq-item-content text-co-p2 lg:text-co-h5 p-0 transition-all ease-in-out">Nunc ligula
-                        suspendisse dui netus. Condimentum blandit rutrum at mauris enim pulvinar duis etiam duis.
-                        Mauris fermentum praesent tellus euismod.
-                    </div>
-                </div>
-            </div>
+<!--            <div class="bg-co-white rounded-mobile py-30p lg:py-66p pr-9 pl-34p lg:pr-60p lg:pl-90p">-->
+<!--                <div class="overflow-hidden">-->
+<!--                    <input id="chk11" type="checkbox">-->
+<!--                    <label class="flex flex-row justify-between cursor-pointer" for="chk11">-->
+<!--                        <span class="text-co-mo-h2 lg:text-co-h5-sbold">Quam vehicula faucibus amet lorem. Quam vehicula faucibus amet lorem.</span>-->
+<!--                        <img alt=" " src="/assets/img/icon-plus.svg">-->
+<!--                        <img alt=" " class="hidden" src="/assets/img/icon-remove.svg">-->
+<!--                    </label>-->
+<!--                    <div class="faq-item-content text-co-p2 lg:text-co-h5 p-0 transition-all ease-in-out">Nunc ligula-->
+<!--                        suspendisse dui netus. Condimentum blandit rutrum at mauris enim pulvinar duis etiam duis.-->
+<!--                        Mauris fermentum praesent tellus euismod.-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
 
         </div>
 
