faq animation working better, style not done

--- a/index.html
+++ b/index.html
@@ -420,37 +420,52 @@
         <div class="overflow-hidden flex flex-col gap-3.5 lg:gap-6">
 
             <div class="faq bg-co-white rounded-mobile py-30p lg:py-66p pr-9 pl-34p lg:pr-60p lg:pl-90p">
-                <input id="chk1" type="checkbox">
-                <label for="chk1" class="cursor-pointer">
-                    <div class="flex items-center justify-between gap-5">
-                        <p class="faq-heading text-co-mo-h2 lg:text-co-h5-sbold">Quam vehicula faucibus amet lorem. </p>
-                        <div class='faq-arrow'></div>
-                    </div>
-                    <p class="faq-text text-co-p2 lg:text-co-h5 p-0 transition-all ease-in-out pt-5">Nunc ligula suspendisse duis etiam duis. Mauris fermentum praesent tellus euismod.</p>
+                <input id="chk1" type="checkbox" class="hidden">
+                <label for="chk1" class="cursor-pointer flex flex-row items-center justify-between gap-5 overflow-hidden relative">
+                    <span class="faq-heading inline-block text-co-mo-h2 lg:text-co-h5-sbold">Quam vehicula faucibus amet lorem. Quam vehicula faucibus amet lorem. Quam vehicula? </span>
+                    <span class="faq-arrow inline-block"></span>
                 </label>
+                <div class="faq-text text-co-p2 lg:text-co-h5 p-0 transition-all ease-in-out pt-5">Nunc ligula suspendisse duis etiam duis. Mauris fermentum praesent tellus euismod. Quam vehicula faucibus amet lorem. Nunc ligula suspendisse duis etiam duis. Mauris fermentum praesent tellus euismod. </div>
             </div>
 
             <div class="faq bg-co-white rounded-mobile py-30p lg:py-66p pr-9 pl-34p lg:pr-60p lg:pl-90p">
-                <input id="chk2" type="checkbox">
-                <label for="chk2" class="cursor-pointer">
-                    <div class="flex items-center justify-between gap-5">
-                        <p class="faq-heading text-co-mo-h2 lg:text-co-h5-sbold">Quam vehicula faucibus amet lorem. </p>
-                        <div class='faq-arrow'></div>
-                    </div>
-                    <p class="faq-text text-co-p2 lg:text-co-h5 p-0 transition-all ease-in-out pt-5">Nunc ligula suspendisse duis etiam duis. Mauris fermentum praesent tellus euismod.</p>
+                <input id="chk2" type="checkbox" class="hidden">
+                <label for="chk2" class="cursor-pointer flex flex-row items-center justify-between gap-5 overflow-hidden relative">
+                    <span class="faq-heading inline-block text-co-mo-h2 lg:text-co-h5-sbold">Quam vehicula faucibus amet lorem. Quam vehicula faucibus amet lorem. Quam vehicula? </span>
+                    <span class="faq-arrow inline-block"></span>
                 </label>
+                <div class="faq-text text-co-p2 lg:text-co-h5 p-0 transition-all ease-in-out pt-5">Nunc ligula suspendisse duis etiam duis. Mauris fermentum praesent tellus euismod. Quam vehicula faucibus amet lorem. Nunc ligula suspendisse duis etiam duis. Mauris fermentum praesent tellus euismod. </div>
             </div>
 
             <div class="faq bg-co-white rounded-mobile py-30p lg:py-66p pr-9 pl-34p lg:pr-60p lg:pl-90p">
-                <input id="chk3" type="checkbox">
-                <label for="chk3" class="cursor-pointer">
-                    <div class="flex items-center justify-between gap-5">
-                        <p class="faq-heading text-co-mo-h2 lg:text-co-h5-sbold">Quam vehicula faucibus amet lorem. </p>
-                        <div class='faq-arrow'></div>
-                    </div>
-                    <p class="faq-text text-co-p2 lg:text-co-h5 p-0 transition-all ease-in-out pt-5">Nunc ligula suspendisse duis etiam duis. Mauris fermentum praesent tellus euismod.</p>
+                <input id="chk3" type="checkbox" class="hidden">
+                <label for="chk3" class="cursor-pointer flex flex-row items-center justify-between gap-5 overflow-hidden relative">
+                    <span class="faq-heading inline-block text-co-mo-h2 lg:text-co-h5-sbold">Quam vehicula faucibus amet lorem. Quam vehicula faucibus amet lorem. Quam vehicula? </span>
+                    <span class="faq-arrow inline-block"></span>
                 </label>
+                <div class="faq-text text-co-p2 lg:text-co-h5 p-0 transition-all ease-in-out pt-5">Nunc ligula suspendisse duis etiam duis. Mauris fermentum praesent tellus euismod. Quam vehicula faucibus amet lorem. Nunc ligula suspendisse duis etiam duis. Mauris fermentum praesent tellus euismod. </div>
             </div>
+<!--            <div class="faq bg-co-white rounded-mobile py-30p lg:py-66p pr-9 pl-34p lg:pr-60p lg:pl-90p">-->
+<!--                <input id="chk2" type="checkbox" class="hidden">-->
+<!--                <label for="chk2" class="cursor-pointer overflow-hidden relative">-->
+<!--                    <div class="flex items-center justify-between gap-5">-->
+<!--                        <p class="faq-heading text-co-mo-h2 lg:text-co-h5-sbold">Quam vehicula faucibus amet lorem. </p>-->
+<!--                        <div class="faq-arrow"></div>-->
+<!--                    </div>-->
+<!--                    <p class="faq-text text-co-p2 lg:text-co-h5 p-0 transition-all ease-in-out pt-5">Nunc ligula suspendisse duis etiam duis. Mauris fermentum praesent tellus euismod.</p>-->
+<!--                </label>-->
+<!--            </div>-->
+
+<!--            <div class="faq bg-co-white rounded-mobile py-30p lg:py-66p pr-9 pl-34p lg:pr-60p lg:pl-90p">-->
+<!--                <input id="chk3" type="checkbox">-->
+<!--                <label for="chk3" class="cursor-pointer">-->
+<!--                    <div class="flex items-center justify-between gap-5">-->
+<!--                        <p class="faq-heading text-co-mo-h2 lg:text-co-h5-sbold">Quam vehicula faucibus amet lorem. </p>-->
+<!--                        <div class='faq-arrow'></div>-->
+<!--                    </div>-->
+<!--                    <p class="faq-text text-co-p2 lg:text-co-h5 p-0 transition-all ease-in-out pt-5">Nunc ligula suspendisse duis etiam duis. Mauris fermentum praesent tellus euismod.</p>-->
+<!--                </label>-->
+<!--            </div>-->
 
 
 
